Closed Bug 810743 Opened 12 years ago Closed 12 years ago

XPCWrappedNative shouldn't clobber explicit exceptions set on the context

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: bholley, Assigned: bholley)

Details

Attachments

(1 file)

I really hesitate to dive into this, but this looks so dumb and so easy to fix.
looks green.
Oh my. I wonder if this has any effect on bug 503244?
Comment on attachment 680504 [details] [diff] [review]
First check for pending exceptions, _then_ examine the invoke result. v1

I'm holding my breath. Touching XPConnect exception handling has always been... exciting. Here's to hoping that try has changed all of that :-/
Attachment #680504 - Flags: review?(mrbkap) → review+
https://hg.mozilla.org/mozilla-central/rev/9d13fb8bd7f5
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: