Bug 810743 - First check for pending exceptions, _then_ examine the invoke result. r=mrbkap